--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,8 +33,12 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.4
   provider: ^6.0.1
+  flutter_riverpod: any
+  hooks_riverpod: ^1.0.3
+  flutter_hooks: ^0.18.1
+
 
 dev_dependencies:
   flutter_test:
