--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   provider: ^6.0.1
+  riverpod: ^1.0.2
+  hooks_riverpod: ^1.0.2
+  flutter_hooks: ^0.18.1
+  redux: ^5.0.0
+  flutter_redux: ^0.8.2
 
 dev_dependencies:
   flutter_test:
