--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   provider: ^6.0.1
+  riverpod: ^1.0.2
+  hooks_riverpod: ^1.0.2
+  flutter_hooks: ^0.18.1
+  flutter_mobx: ^2.0.3+2
+  mobx: ^2.0.6+1
 
 dev_dependencies:
   flutter_test:
@@ -46,6 +51,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+  build_runner: ^2.1.7
+  mobx_codegen: ^2.0.5+2
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
