--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   provider: ^6.0.1
+  riverpod: ^1.0.2
+  hooks_riverpod: ^1.0.2
+  flutter_hooks: ^0.18.1
+  equatable: ^2.0.3
+  meta: ^1.7.0
+  bloc: ^8.0.2
 
 dev_dependencies:
   flutter_test:
