--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_hooks: ^0.18.1
   redux: ^5.0.0
   flutter_redux: ^0.8.2
+  flutter_redux_dev_tools: ^0.5.1
 
 dev_dependencies:
   flutter_test:
